--- a/app/src/main/res/layout/activity_biaya_jasa_.xml
+++ b/app/src/main/res/layout/activity_biaya_jasa_.xml
@@ -165,6 +165,7 @@
             <TableRow>
 
                 <CheckBox
+                    android:id="@+id/cb_outsource"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="OUTSOURCE"/>
