--- a/app/src/main/res/layout/activity_checkin3_.xml
+++ b/app/src/main/res/layout/activity_checkin3_.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:descendantFocusability="beforeDescendants"
@@ -114,24 +115,29 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
             <android.support.v7.widget.CardView
                 android:id="@+id/cardView_namaLayanan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
-                android:layout_marginStart="-10dp"
-                android:layout_marginEnd="-10dp"
+                android:layout_marginStart="-5dp"
+                android:layout_marginEnd="-5dp"
                 android:padding="20dp"
                 app:cardCornerRadius="5dp"
-                app:cardElevation="1dp">
+                app:cardElevation="2dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:padding="10dp">
+                    android:padding="10dp"
+                    android:layout_marginBottom="15dp">
 
                     <TextView
                         android:id="@+id/tv_namaLayanan_checkin"
@@ -151,11 +157,48 @@
                         android:text="BIAYA LAYANAN"
                         android:textColor="@color/grey_900"
                         android:textStyle="bold"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        android:textAlignment="textEnd"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="end|bottom"
+                    android:paddingEnd="15dp"
+                    android:layout_marginTop="14dp"
+                    tools:ignore="RtlSymmetry">
+
+                    <TextView
+                        android:id="@+id/tv_waktu_layanan"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="WAKTU LAYANAN"
+                        android:textColor="@color/red_500"
+                        android:textStyle="bold"
+                        android:layout_gravity="end"
+                        android:textSize="10sp"
+                        tools:ignore="SmallSp" />
+
+                    <TextView
+                        android:id="@+id/tv_jenis_antrian"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="JENIS ANTRIAN"
+                        android:textColor="@color/red_500"
+                        android:textStyle="bold"
+                        android:layout_marginTop="2dp"
+                        android:layout_gravity="end"
+                        android:textSize="10sp"
+                        tools:ignore="SmallSp" />
 
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
+
+            </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView_part_checkin3"
