--- a/app/src/main/res/layout/activity_pengisian_part_keluar_.xml
+++ b/app/src/main/res/layout/activity_pengisian_part_keluar_.xml
@@ -19,6 +19,7 @@
             android:padding="10dp">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/tl_stock_part_keluar"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
