--- a/app/src/main/res/layout/activity_checkin4_.xml
+++ b/app/src/main/res/layout/activity_checkin4_.xml
@@ -149,6 +149,16 @@
 
                 </LinearLayout>
 
+                <TextView
+                    android:id="@+id/tv_disable_estimasi"
+                    android:layout_height="wrap_content"
+                    android:text="DISABLE"
+                    android:layout_width="wrap_content"
+                    android:textColor="@color/red_800"
+                    android:textStyle="bold"
+                    android:textSize="12sp"
+                    android:layout_gravity="end" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -339,12 +349,22 @@
                             android:layout_height="match_parent"
                             android:drawableStart="@drawable/icon_jam"
                             android:gravity="center"
-                            android:textColor="@color/grey_900"
-                            />
+                            android:textColor="@color/grey_900" />
 
                     </RelativeLayout>
 
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/tv_disable_waktu_antar"
+                    android:layout_height="wrap_content"
+                    android:text="DISABLE"
+                    android:layout_width="wrap_content"
+                    android:textColor="@color/red_800"
+                    android:textStyle="bold"
+                    android:textSize="12sp"
+                    android:layout_gravity="end"
+                    android:layout_marginTop="-5dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -377,7 +397,6 @@
                     </RelativeLayout>
 
                 </LinearLayout>
-
 
                 <android.support.design.widget.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
